﻿============================== next release ==============================

  new data (thanks to Henning Moldenhauer, Technische Universität Dortmund, Germany, for suggesting data!)
    other/amorphous/HAC/Smith-Td250C.yml
    other/amorphous/HAC/Smith-Ta350C.yml
    other/amorphous/HAC/Smith-Ta450C.yml
    other/amorphous/HAC/Smith-Ta550C.yml
    other/amorphous/HAC/Smith-Ta650C.yml
    other/amorphous/HAC/Smith-Ta750C.yml
  new data (thanks to Leon Avakyan, Southern Federal University, Rostov-on-Don, Russia, for submitting data in YAML format!)
    other/intermetallics/PtAl2/Chen.yml
    other/intermetallics/AuAl2/Chen.yml
  new data (many thanks to Baokun Song, University of Pennsylvania, USA!)
    main/Bi2Se3/Fang-2L.yml
    main/Bi2Se3/Fang-4L.yml
    main/Bi2Se3/Fang-6L.yml
    main/Bi2Se3/Fang-8L.yml
    main/Bi2Se3/Fang-10L.yml
    main/WSe2/Gu-1L.yml
    main/WSe2/Gu-2L.yml
    main/WSe2/Gu-3L.yml
    main/WSe2/Gu-4L.yml
    main/WSe2/Gu-5L.yml
    main/MoS2/Song-bulk.yml
    main/MoS2/Song-1L.yml
    main/MoS2/Song-3L.yml
    main/MoS2/Song-4L.yml
    main/MoS2/Song-6L.yml
    main/MoS2/Song-8L.yml
    main/MoS2/Song-10L.yml
    main/MoS2/Song-13L.yml
    main/C/Song.yml
    main/C/Song-cHOPG-o.yml
    main/C/Song-cHOPG-e.yml
    main/C/Song-sHOPG-o.yml
    main/C/Song-sHOPG-e.yml
    other/perovskite/2D HOIP/Song-RP1.yml
    other/perovskite/2D HOIP/Song-RP2.yml
    other/perovskite/2D HOIP/Song-RP3.yml
    other/perovskite/2D HOIP/Song-RP4.yml
    other/perovskite/2D HOIP/Song-RP5.yml
    other/perovskite/2D HOIP/Song-DJ1.yml
    other/perovskite/2D HOIP/Song-DJ2.yml
    other/perovskite/2D HOIP/Song-DJ3.yml
    other/perovskite/2D HOIP/Song-DJ4.yml
    main/C/Song-HiPco.yml
    main/C/Song-Arc.yml
  new data (thanks to Zheru Qiu, École Polytechnique Fédérale de Lausanne, Switzerland, for suggesting data!)
    main/Nb/Weaver.yml
    main/W/Weaver.yml
  new data (thanks to S EGYL!)
    main/CS2/Chemnitz.yml