@@ -1,0 +1,302 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "R Kerremans, C. Kaiser, W. Li, N. Zarrabi, P. Meredith, A. Armin, The optical constants of solution-processed semiconductors—new challenges with perovskites and non-fullerene acceptors, <a href=\"https://doi.org/10.1002/adom.202000319\"><i>Adv. Opt. Mater.</i> <b>8</b>, 2000319 (2020)</a><br>(Data points extracted from Figure 4, PBDB-T:ITIC, Ellipsometry)"
+COMMENTS: "PBDB-T:ITIC (1:1) thin film."
+DATA:
+  - type: tabulated n
+    data: |
+        0.3733 1.62627
+        0.3944 1.60633
+        0.4183 1.57215
+        0.4367 1.55222
+        0.4514 1.51804
+        0.4680 1.48386
+        0.4800 1.44968
+        0.4937 1.40981
+        0.5057 1.37563
+        0.5232 1.33291
+        0.5305 1.32437
+        0.5480 1.34715
+        0.5691 1.41835
+        0.5793 1.47816
+        0.5912 1.54652
+        0.6078 1.61487
+        0.6179 1.67184
+        0.6262 1.74019
+        0.6308 1.78006
+        0.6363 1.84272
+        0.6390 1.89968
+        0.6436 1.96804
+        0.6482 2.01930
+        0.6510 2.05063
+        0.6547 2.09905
+        0.6639 2.14177
+        0.6731 2.12468
+        0.6850 2.09051
+        0.6924 2.09335
+        0.6979 2.15601
+        0.7016 2.20158
+        0.7052 2.26424
+        0.7080 2.29842
+        0.7098 2.34399
+        0.7126 2.38956
+        0.7126 2.41804
+        0.7144 2.45222
+        0.7181 2.49209
+        0.7209 2.52057
+        0.7236 2.56044
+        0.7255 2.60601
+        0.7301 2.64019
+        0.7365 2.69146
+        0.7402 2.71994
+        0.7494 2.75411
+        0.7567 2.76266
+        0.7641 2.74272
+        0.7696 2.71424
+        0.7733 2.68576
+        0.7788 2.65158
+        0.7816 2.62025
+        0.7852 2.58323
+        0.7898 2.55190
+        0.7935 2.52057
+        0.8018 2.47785
+        0.8064 2.45222
+        0.8137 2.42373
+        0.8183 2.40095
+        0.8285 2.36677
+        0.8340 2.34684
+        0.8441 2.32120
+        0.8551 2.29557
+        0.8652 2.26994
+        0.8754 2.25570
+        0.8855 2.23576
+        0.9002 2.21297
+        0.9075 2.20728
+        0.9204 2.18734
+        0.9333 2.17310
+        0.9443 2.16456
+        0.9572 2.15601
+        0.9701 2.14462
+        0.9885 2.12753
+        1.0032 2.11614
+        1.0124 2.11044
+        1.0252 2.10759
+        1.0381 2.09905
+        1.0482 2.08766
+        1.0583 2.08766
+        1.0731 2.07627
+        1.0878 2.07627
+        1.0988 2.06772
+        1.1117 2.06487
+        1.1227 2.06203
+        1.1347 2.05633
+        1.1503 2.04778
+        1.1632 2.04494
+        1.1724 2.04494
+        1.1834 2.03639
+        1.1944 2.03639
+        1.2091 2.03070
+        1.2183 2.03070
+        1.2349 2.03070
+        1.2496 2.02215
+        1.2643 2.02500
+        1.2772 2.01646
+        1.2937 2.01361
+        1.3066 2.01361
+        1.3177 2.00791
+        1.3342 2.01076
+        1.3489 2.00222
+        1.3636 2.00222
+        1.3765 2.00222
+        1.3931 1.99652
+        1.4032 1.99937
+        1.4151 1.99082
+        1.4243 1.99082
+        1.4335 1.99082
+        1.4501 1.98513
+        1.4648 1.98513
+        1.4795 1.98513
+        1.4905 1.98513
+        1.5071 1.98513
+        1.5181 1.98228
+        1.5273 1.97943
+        1.5429 1.97658
+        1.5567 1.97943
+        1.5696 1.97658
+        1.5834 1.97658
+        1.6045 1.96804
+
+  - type: tabulated k
+    data: |
+        0.3771 0.29159
+        0.3871 0.28002
+        0.4000 0.27232
+        0.4146 0.27427
+        0.4292 0.27430
+        0.4402 0.27625
+        0.4512 0.28013
+        0.4603 0.28400
+        0.4695 0.29174
+        0.4814 0.31108
+        0.4896 0.33040
+        0.4969 0.35359
+        0.5042 0.38064
+        0.5097 0.39996
+        0.5134 0.42701
+        0.5170 0.45405
+        0.5207 0.48110
+        0.5271 0.51973
+        0.5317 0.55257
+        0.5353 0.58155
+        0.5390 0.61246
+        0.5426 0.63950
+        0.5463 0.66461
+        0.5509 0.69745
+        0.5536 0.71870
+        0.5573 0.73995
+        0.5591 0.75927
+        0.5618 0.77859
+        0.5655 0.80563
+        0.5692 0.82881
+        0.5746 0.85972
+        0.5792 0.89063
+        0.5865 0.91768
+        0.5920 0.93700
+        0.5966 0.95439
+        0.6048 0.97179
+        0.6094 0.99497
+        0.6149 1.02009
+        0.6185 1.04134
+        0.6204 1.06645
+        0.6231 1.08770
+        0.6268 1.11088
+        0.6295 1.13020
+        0.6332 1.14372
+        0.6396 1.15146
+        0.6460 1.13795
+        0.6506 1.11478
+        0.6524 1.09161
+        0.6551 1.06844
+        0.6579 1.04913
+        0.6597 1.02209
+        0.6625 0.99892
+        0.6643 0.98347
+        0.6670 0.96416
+        0.6689 0.94485
+        0.6707 0.92941
+        0.6762 0.91783
+        0.6798 0.92556
+        0.6826 0.94101
+        0.6853 0.96419
+        0.6862 0.98737
+        0.6890 1.00669
+        0.6926 1.03953
+        0.6954 1.06271
+        0.6954 1.08588
+        0.6981 1.10327
+        0.6990 1.12258
+        0.7027 1.14190
+        0.7064 1.15929
+        0.7100 1.16316
+        0.7137 1.15351
+        0.7201 1.12841
+        0.7237 1.07241
+        0.7265 1.04151
+        0.7274 1.01641
+        0.7292 0.99130
+        0.7310 0.95654
+        0.7310 0.93337
+        0.7338 0.90826
+        0.7356 0.80204
+        0.7356 0.87930
+        0.7365 0.85226
+        0.7375 0.82908
+        0.7384 0.77501
+        0.7384 0.73252
+        0.7411 0.69776
+        0.7420 0.66300
+        0.7420 0.63210
+        0.7429 0.60506
+        0.7439 0.57995
+        0.7457 0.55099
+        0.7466 0.48146
+        0.7475 0.51236
+        0.7484 0.45829
+        0.7493 0.43511
+        0.7493 0.40807
+        0.7493 0.39262
+        0.7521 0.36173
+        0.7521 0.31537
+        0.7530 0.34241
+        0.7548 0.27675
+        0.7557 0.24971
+        0.7567 0.21881
+        0.7576 0.18985
+        0.7585 0.15315
+        0.7603 0.12998
+        0.7621 0.09908
+        0.7640 0.07591
+        0.7667 0.04887
+        0.7695 0.01411
+        0.7695 -0.01292
+        0.7704 -0.00906
+        0.7777 -0.02836
+        0.7868 -0.03994
+        0.8006 -0.04378
+        0.8115 -0.03990
+        0.8216 -0.03409
+        0.8307 -0.02635
+        0.8408 -0.02054
+        0.8518 -0.01472
+        0.8646 -0.01277
+        0.8829 -0.00695
+        0.8957 -0.00306
+        0.9067 0.00275
+        0.9231 0.00277
+        0.9378 0.00473
+        0.9506 0.00089
+        0.9652 0.00091
+        0.9798 0.00286
+        0.9945 0.00289
+        1.0091 0.00291
+        1.0256 0.00294
+        1.0429 0.00297
+        1.0567 0.00299
+        1.0731 0.00301
+        1.0859 0.00497
+        1.1070 0.00500
+        1.1225 0.00116
+        1.1408 0.00506
+        1.1564 0.00315
+        1.1728 0.00511
+        1.1902 0.00320
+        1.2085 0.00323
+        1.2250 0.00519
+        1.2414 0.00522
+        1.2597 0.00138
+        1.2798 0.00335
+        1.2945 0.00337
+        1.3054 0.00339
+        1.3182 0.00148
+        1.3347 0.00344
+        1.3521 0.00540
+        1.3676 0.00349
+        1.3823 0.00351
+        1.3987 0.00161
+        1.4143 0.00356
+        1.4307 0.00166
+        1.4445 0.00554
+        1.4646 0.00558
+        1.4810 0.00367
+        1.4975 0.00563
+        1.5112 0.00565
+        1.5268 0.00568
+        1.5423 0.00570
+        1.5570 0.00572
+        1.5670 0.00574
+        1.5780 0.00576
+        1.5890 0.00578
+        1.6000 0.00579
+
