@@ -1,0 +1,33 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>PBDB-T:ITIC</h1>
+
+<h2>Applications</h2>
+<ul>
+<li>Solar cells</li>
+</ul>
+
+<h2>Chemical composition</h2>
+PBDB-T: (C<sub>68</sub>H<sub>78</sub>O<sub>2</sub>S<sub>8</sub>)<sub>n</sub>
+<br>
+ITIC: C<sub>94</sub>H<sub>82</sub>N<sub>4</sub>O<sub>2</sub>S<sub>4</sub>
+
+<h2>Other names (PTB7)</h2>
+<ul>
+<li>Poly[[4,8-bis[5-(2-ethylhexyl)-2-thienyl]benzo[1,2-b:4,5-b′]dithiophene-2,6-diyl]-2,5-thiophenediyl[5,7-bis(2-ethylhexyl)-4,8-dioxo-4H,8H-benzo[1,2-c:4,5-c′]dithiophene-1,3-diyl]]</li></li>
+</ul>
+
+<h2>Other names (ITIC)</h2>
+<ul>
+<li>2,2′-[[6,6,12,12-Tetrakis(4-hexylphenyl)-6,12-dihydrodithieno[2,3-d:2′,3′-d′]-s-indaceno[1,2-b:5,6-b′]dithiophene-2,8-diyl]bis[methylidyne(3-oxo-1H-indene-2,1(3H)-diylidene)]]bis[propanedinitrile]</li>
+</ul>
+
+<h2>External links</h2>
+<ul>
+<li><a href="https://www.sigmaaldrich.com/catalog/product/aldrich/901099">PBDB-T - Sigma Aldrich</a></li>
+<li><a href="https://www.sigmaaldrich.com/catalog/product/aldrich/900799">ITIC - Sigma Aldrich</a></li>
+</ul>
